add_executable(add-one-row-to-tree
        add-one-row-to-tree.cpp
        )
add_custom_target(add-one-row-to-tree_run
        COMMAND add-one-row-to-tree
        )

add_executable(avl-tree-rotation
        avl-tree-rotation.cpp
        )
add_custom_target(avl-tree-rotation_run
        COMMAND avl-tree-rotation
        )

add_executable(balanced-binary-tree
        balanced-binary-tree.cpp
        )
add_custom_target(balanced-binary-tree_run
        COMMAND balanced-binary-tree
        )

add_executable(binary-search-tree-i-search
        binary-search-tree-i-search.cpp
        )
add_custom_target(binary-search-tree-i-search_run
        COMMAND binary-search-tree-i-search
        )

add_executable(binary-search-tree-ii-insert
        binary-search-tree-ii-insert.cpp
        )
add_custom_target(binary-search-tree-ii-insert_run
        COMMAND binary-search-tree-ii-insert
        )

add_executable(binary-search-tree-iii-delete
        binary-search-tree-iii-delete.cpp
        )
add_custom_target(binary-search-tree-iii-delete_run
        COMMAND binary-search-tree-iii-delete
        )

add_executable(binary-search-tree-iterator
        binary-search-tree-iterator.cpp
        )
add_custom_target(binary-search-tree-iterator_run
        COMMAND binary-search-tree-iterator
        )

add_executable(binary-tree-inorder-traversal
        binary-tree-inorder-traversal.cpp
        )
add_custom_target(binary-tree-inorder-traversal_run
        COMMAND binary-tree-inorder-traversal
        )

add_executable(binary-tree-level-order-traversal
        binary-tree-level-order-traversal.cpp
        )
add_custom_target(binary-tree-level-order-traversal_run
        COMMAND binary-tree-level-order-traversal
        )

add_executable(binary-tree-longest-consecutive-sequence
        binary-tree-longest-consecutive-sequence.cpp
        )
add_custom_target(binary-tree-longest-consecutive-sequence_run
        COMMAND binary-tree-longest-consecutive-sequence
        )

add_executable(binary-tree-longest-consecutive-sequence-ii
        binary-tree-longest-consecutive-sequence-ii.cpp
        )
add_custom_target(binary-tree-longest-consecutive-sequence-ii_run
        COMMAND binary-tree-longest-consecutive-sequence-ii
        )

add_executable(binary-tree-maximum-path-sum
        binary-tree-maximum-path-sum.cpp
        )
add_custom_target(binary-tree-maximum-path-sum_run
        COMMAND binary-tree-maximum-path-sum
        )

add_executable(binary-tree-paths
        binary-tree-paths.cpp
        )
add_custom_target(binary-tree-paths_run
        COMMAND binary-tree-paths
        )

add_executable(binary-tree-postorder-traversal
        binary-tree-postorder-traversal.cpp
        )
add_custom_target(binary-tree-postorder-traversal_run
        COMMAND binary-tree-postorder-traversal
        )

add_executable(binary-tree-preorder-traversal
        binary-tree-preorder-traversal.cpp
        )
add_custom_target(binary-tree-preorder-traversal_run
        COMMAND binary-tree-preorder-traversal
        )

add_executable(binary-tree-upside-down
        binary-tree-upside-down.cpp
        )
add_custom_target(binary-tree-upside-down_run
        COMMAND binary-tree-upside-down
        )

add_executable(binary-tree-vertical-order-traversal
        binary-tree-vertical-order-traversal.cpp
        )
add_custom_target(binary-tree-vertical-order-traversal_run
        COMMAND binary-tree-vertical-order-traversal
        )

add_executable(binary-tree-zigzag-level-order-traversal
        binary-tree-zigzag-level-order-traversal.cpp
        )
add_custom_target(binary-tree-zigzag-level-order-traversal_run
        COMMAND binary-tree-zigzag-level-order-traversal
        )

add_executable(closest-binary-search-tree-value
        closest-binary-search-tree-value.cpp
        )
add_custom_target(closest-binary-search-tree-value_run
        COMMAND closest-binary-search-tree-value
        )

add_executable(construct-binary-tree-from-inorder-and-postorder-traversal
        construct-binary-tree-from-inorder-and-postorder-traversal.cpp
        )
add_custom_target(construct-binary-tree-from-inorder-and-postorder-traversal_run
        COMMAND construct-binary-tree-from-inorder-and-postorder-traversal
        )

add_executable(construct-binary-tree-from-preorder-and-inorder-traversal
        construct-binary-tree-from-preorder-and-inorder-traversal.cpp
        )
add_custom_target(construct-binary-tree-from-preorder-and-inorder-traversal_run
        COMMAND construct-binary-tree-from-preorder-and-inorder-traversal
        )

add_executable(convert-bst-to-greater-tree
        convert-bst-to-greater-tree.cpp
        )
add_custom_target(convert-bst-to-greater-tree_run
        COMMAND convert-bst-to-greater-tree
        )

add_executable(convert-sorted-array-to-binary-search-tree
        convert-sorted-array-to-binary-search-tree.cpp
        )
add_custom_target(convert-sorted-array-to-binary-search-tree_run
        COMMAND convert-sorted-array-to-binary-search-tree
        )

add_executable(inorder-predecessor-in-bst
        inorder-predecessor-in-bst.cpp
        )
add_custom_target(inorder-predecessor-in-bst_run
        COMMAND inorder-predecessor-in-bst
        )

add_executable(inorder-successor-in-bst
        inorder-successor-in-bst.cpp
        )
add_custom_target(inorder-successor-in-bst_run
        COMMAND inorder-successor-in-bst
        )

add_executable(kth-smallest-element-in-a-bst
        kth-smallest-element-in-a-bst.cpp
        )
add_custom_target(kth-smallest-element-in-a-bst_run
        COMMAND kth-smallest-element-in-a-bst
        )

add_executable(lowest-common-ancestor-of-a-binary-search-tree
        lowest-common-ancestor-of-a-binary-search-tree.cpp
        )
add_custom_target(lowest-common-ancestor-of-a-binary-search-tree_run
        COMMAND lowest-common-ancestor-of-a-binary-search-tree
        )

add_executable(lowest-common-ancestor-of-a-binary-tree
        lowest-common-ancestor-of-a-binary-tree.cpp
        )
add_custom_target(lowest-common-ancestor-of-a-binary-tree_run
        COMMAND lowest-common-ancestor-of-a-binary-tree
        )

add_executable(maximum-depth-of-binary-tree
        maximum-depth-of-binary-tree.cpp
        )
add_custom_target(maximum-depth-of-binary-tree_run
        COMMAND maximum-depth-of-binary-tree
        )

add_executable(minimum-depth-of-binary-tree
        minimum-depth-of-binary-tree.cpp
        )
add_custom_target(minimum-depth-of-binary-tree_run
        COMMAND minimum-depth-of-binary-tree
        )

add_executable(path-sum
        path-sum.cpp
        )
add_custom_target(path-sum_run
        COMMAND path-sum
        )

add_executable(path-sum-ii
        path-sum-ii.cpp
        )
add_custom_target(path-sum-ii_run
        COMMAND path-sum-ii
        )

add_executable(same-tree
        same-tree.cpp
        )
add_custom_target(same-tree_run
        COMMAND same-tree
        )

add_executable(sum-root-to-leaf-numbers
        sum-root-to-leaf-numbers.cpp
        )
add_custom_target(sum-root-to-leaf-numbers_run
        COMMAND sum-root-to-leaf-numbers
        )

add_executable(symmetric-tree
        symmetric-tree.cpp
        )
add_custom_target(symmetric-tree_run
        COMMAND symmetric-tree
        )

add_executable(unique-binary-search-trees
        unique-binary-search-trees.cpp
        )
add_custom_target(unique-binary-search-trees_run
        COMMAND unique-binary-search-trees
        )

add_executable(unique-binary-search-trees-ii
        unique-binary-search-trees-ii.cpp
        )
add_custom_target(unique-binary-search-trees-ii_run
        COMMAND unique-binary-search-trees-ii
        )

add_executable(validate-binary-search-tree
        validate-binary-search-tree.cpp
        )
add_custom_target(validate-binary-search-tree_run
        COMMAND validate-binary-search-tree
        )

add_executable(verify-preorder-sequence-in-binary-search-tree
        verify-preorder-sequence-in-binary-search-tree.cpp
        )
add_custom_target(verify-preorder-sequence-in-binary-search-tree_run
        COMMAND verify-preorder-sequence-in-binary-search-tree
        )

add_executable(triggering_run_tree
        ../triggering_run.cpp
        )

add_dependencies(triggering_run_tree
        add-one-row-to-tree_run
        balanced-binary-tree_run
        binary-search-tree-i-search_run
        binary-search-tree-ii-insert_run
        binary-search-tree-iii-delete_run
        binary-search-tree-iterator_run
        binary-tree-inorder-traversal_run
        binary-tree-level-order-traversal_run
        binary-tree-longest-consecutive-sequence_run
        binary-tree-longest-consecutive-sequence-ii_run
        binary-tree-maximum-path-sum_run
        binary-tree-paths_run
        binary-tree-postorder-traversal_run
        binary-tree-preorder-traversal_run
        binary-tree-upside-down_run
        binary-tree-vertical-order-traversal_run
        binary-tree-zigzag-level-order-traversal_run
        closest-binary-search-tree-value_run
        construct-binary-tree-from-inorder-and-postorder-traversal_run
        construct-binary-tree-from-preorder-and-inorder-traversal_run
        convert-bst-to-greater-tree_run
        convert-sorted-array-to-binary-search-tree_run
        inorder-predecessor-in-bst_run
        inorder-successor-in-bst_run
        kth-smallest-element-in-a-bst_run
        lowest-common-ancestor-of-a-binary-search-tree_run
        lowest-common-ancestor-of-a-binary-tree_run
        maximum-depth-of-binary-tree_run
        minimum-depth-of-binary-tree_run
        path-sum_run
        path-sum-ii_run
        same-tree_run
        sum-root-to-leaf-numbers_run
        symmetric-tree_run
        unique-binary-search-trees_run
        unique-binary-search-trees-ii_run
        validate-binary-search-tree_run
        verify-preorder-sequence-in-binary-search-tree_run
        )
